Review and test encoder and decoder properties
@ndufresne
Submitted by Nicolas Dufresne Link to original bug (#796839)
Description
Create from bug 792900
The new properties were only lightly tested. There is still a lot of property that make little sense or are not usable for specific encoders, so some properties might be applied to audio encoder that only make sense for video. Some extra filtering might be needed.
There is a also some bugs. To use H263 with RTP, you need to set the GOB size, that property was called "rtp-payload-size", without that it works badly in RTP. Need to chase this up, might be an upstream FFMPEG bug.